plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.12'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.school'
version = '0.0.1-SNAPSHOT'
description = 'student-management'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // 통합 테스트용 Testcontainers (실제 Postgres/RabbitMQ) — 버전은 Spring Boot BOM이 관리
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:rabbitmq'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
    // 스웨거로 인한 commons-lang3를 해결하기
    // [보안 패치] CVE-2025-48924 해결을 위해 commons-lang3 버전을 강제로 최신으로 끌어올림
    implementation 'org.apache.commons:commons-lang3:3.20.0'


    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // Apache POI(엑셀 파싱)
    implementation 'org.apache.poi:poi-ooxml:5.4.0'

    // AWS S3 SDK (MinIO 등 S3 호환 스토리지 연동)
    implementation 'software.amazon.awssdk:s3:2.31.0'

    // Flyway — analytics(OLAP) 스키마/테이블 마이그레이션 전용 (운영 public은 ddl-auto 유지)
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // 보고서 PDF: Thymeleaf(HTML 템플릿) + openhtmltopdf(HTML→PDF) + jsoup(HTML5 → W3C DOM 변환)
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'
    implementation 'org.jsoup:jsoup:1.18.1'
}

tasks.named('test') {
    useJUnitPlatform()
}
